<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".apply_picture">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:contents="${relativePackage}.${activityClass}">
        <ImageButton
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/profile"
            android:src="@drawable/roulette"
        />
        <TextView
            android:id="@+id/spell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/profile"
            android:text="@string/아이디"
         />
        <ImageView
            android:id="@+id/picture1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spell"
            android:src="@drawable/sticker"
            android:contentDescription="@string/sticker"/>
        <ImageButton
            android:id="@+id/good_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/picture1"
            android:layout_alignParentLeft="true"
            android:src="@drawable/good"
            android:contentDescription="@string/좋아요"
            />
        <ImageButton
            android:id="@+id/comment_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/good_button"
            android:src="@drawable/comment"
            android:contentDescription="@string/댓글"
            />
        <ImageButton
            android:id="@+id/send_message_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/comment_button"
            android:src="@drawable/send_message"/>
        <ImageButton
            android:id="@+id/check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/send_message_button"
            android:layout_alignParentRight="true"
            android:src="@drawable/check"
            android:contentDescription="@string/메시지보내기"/>
        <TextView
            android:id="@+id/good_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/good_button"
            android:layout_alignParentLeft="true"
            android:text="@string/좋아요갯수" />
        <TextView
            android:id="@+id/comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/good_number"
            android:layout_alignParentLeft="true"
            android:text="@string/댓글창입니다"/>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>